cosc111-exam-4-master/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master
-d
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java
<---- end of javadoc command ---->
Loading source file C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java...
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java:64: error: illegal start of expression
	        if(i>M.getNRows())== val)
	                          ^
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java:64: error: ';' expected
	        if(i>M.getNRows())== val)
	                                ^
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java:68: error: ')' expected
	        else if(M.getMatrixValue(i,z)
	                                     ^
C:\Users\Matthew\Documents\COSC\cosc111-exam-4-master\LatinSquare.java:68: error: 'else' without 'if'
	        else if(M.getMatrixValue(i,z)
	        ^
4 errors
